--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URI = mongodb+srv://pfabijani:Monster12@sharpapp.xva3d.mongodb.net/?retryWrites=true&w=majority&appName=sharpapp
+MONGO_URI = mongodb+srv://pfabijani:Monster12@sharpapp.xva3d.mongodb.net/sharpapp_database?retryWrites=true&w=majority&appName=sharpapp
 MONGO_DB_NAME = sharpapp_database
+VUE_BACKEND_URL = http://localhost:3000
